--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,13 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                focus on my github<br />
+				{{site.mail}}
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+			  <a href="https://{{site.git}}">{{site.git}}</a><br />
               </p>
             </div>
           </div>
