--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -46,19 +46,30 @@
       </div>
     </div>
 
-    <div class="container-narrow">
-
-      <div class="content">
-        {{ content }}
-      </div>
+   <!--<div class="container-narrow"> -->
+	
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span6 offset2">
+				<div class="content">
+					{{ content }}
+				</div>
+			</div>
+			<div class="span3">
+				{% include common/rightBar.html %}
+			</div>
+		</div>
       <hr>
+	  <div class="row-fluid">
+	   <div class="offset3">
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
-
+	  </div>
+	</div>
     </div>
 
     {% include JB/analytics %}
