--- a/_includes/common/rightBar.html
+++ b/_includes/common/rightBar.html
@@ -7,7 +7,9 @@
 	<tbody>
 		<tr>
 			<td>
-				This is me
+				<a href="http://r.qq.com/cgi-bin/reader_switch?u={{ BASE_PATH }}">
+					<img src="http://res.mail.qq.com/zh_CN/htmledition/images/rss/icon_sub01.gif"/>
+				</a>
 			</td>
 		</tr>
 	</tbody>
