添加头像和两篇博客

--- a/_includes/common/rightBar.html
+++ b/_includes/common/rightBar.html
@@ -5,10 +5,25 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
+			<tr>
+				<td>
+					<img src="/assets/pic/head.jpeg">
+				</td>
+			</tr>
+			<tr>
 			<td>
-				<strong>	建议大家使用rss访问阅读。 </strong>
-				<br> 
+				<strong>现役web后端工程师， 效力于
+					<a href="http://m.sohu.com/?v=3&_trans_=slb">手机搜狐网</a>
+					,工作地点北京,主要工作是网站的后台开发和整站性能优化。 关注高并发网站的架构和优化。
+				</strong>
+			</td>
+		</tr>
+		<tr>
+		<td>
+				<strong>联系方式： lianbo8@gmail.com</strong>
+				<br>
+				<strong>github: <a href="https://github.com/shaolianbo">github.com/shaolianbo</a></strong>
+				<br>
 				<a href="http://r.qq.com/cgi-bin/reader_switch?u={{ site.domain }}" target="_blank">
 					<img src="http://res.mail.qq.com/zh_CN/htmledition/images/rss/icon_sub01.gif"/>
 				</a>
